#68654 fix for align with error message

--- a/Snowdog_Components/components/Molecules/form/checkbox/_checkbox.scss
+++ b/Snowdog_Components/components/Molecules/form/checkbox/_checkbox.scss
@@ -108,4 +108,9 @@
     &__text {
         width: $checkbox__text-width;
     }
+
+    .mage-error {
+        position: absolute;
+        bottom: $checkbox__error-bottom;
+    }
 }
